[package]
name = "ap_sitl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "UDP bridge and JSON message types for ArduPilot's JSON SITL backend."
license = "MIT"
repository = "https://github.com/azakura-systems/ap_sitl"
documentation = "https://docs.rs/ap_sitl"
readme = "README.md"
keywords = ["ardupilot", "sitl", "simulation", "udp", "json"]
categories = ["aerospace::simulation", "network-programming", "simulation"]

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
rt_timer = "0.1.0"
